0.14

0.13 2023-05-02T09:29:21+02:00
 - Add doc for Wikibase::Datatype::Print::Mediainfo.
 - Add doc for Wikibase::Datatype::Print::Property.
 - Add example for print_forms() to Util.
 - Finish Print doc.
 - Fix print() function in doc. More contexts.

0.12 2023-04-24T18:40:57+02:00
 - Add doc for Wikibase::Datatype::Print::Item.
 - Fix dependency to Wikidata::Datatype::Value::Sense.

0.11 2023-04-23T18:41:18+02:00
 - Add doc example in Utils.
 - Add comments.
 - Add support for before/after in year precision in Time.
 - Add support for decade precision in Time.
 - Fix MANIFEST file for sense value test.
 - Fix support of bigger year than with 4 characters.
 - Improve datetime precision print.

0.10 2023-04-23T10:57:02+02:00
 - Add doc for Wikibase::Datatype::Print::Lexeme.
 - Add support of sense to Value.
 - Add Wikibase::Datatype::Print::Value::Sense.
 - Fix test message.

0.09 2023-04-21T21:13:56+02:00
 - Add doc for Wikibase::Datatype::Print::Form.
 - Add doc for Wikibase::Datatype::Print::Reference.
 - Add doc for Wikibase::Datatype::Print::Sense.
 - Improve printing of time.

0.08 2023-04-18T01:48:41+02:00
 - Add doc for Wikibase::Datatype::Print::MediainfoStatement.
 - Add error check to Wikibase::Datatype::Print::Value::Time.
 - Add test for Utils::print_common().
 - Add tests for Wikibase::Datatype::Print::Value.
 - Fix minimal dependency for
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoStatement::Commons::Depicts::Human.

0.07 2023-04-17T11:50:54+02:00
 - Add doc for Wikibase::Datatype::Print::MediainfoSnak.
 - Add doc for Wikibase::Datatype::Print::Snak.
 - Add doc for Wikibase::Datatype::Print::Statement.
 - Add references to MediainfoStatement.
 - Fix dependencies.
 - Fix printing of multiple references. Each reference is in '{' and '}'
   block.
 - Fix test dependencies.
 - Remove non-sense test dependency to Wikibase::Datatype.
 - Remove obsolete dependencies in Wikibase::Datatype::Print::Sitelink.

0.06 2023-04-15T18:46:48+02:00