@@ -1,4 +1,5 @@
 0.14
+ - Update Module::Install to 1.21 version.
 
 0.13 2023-05-02T09:29:21+02:00
  - Add doc for Wikibase::Datatype::Print::Mediainfo.
